mobile resp update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
-  <title> Ayo's Portfolio </title>
+  <title>Ayo's Portfolio</title>
   <meta content="Ayo's Portfolio" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
@@ -21,13 +21,15 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
-    <div class="navigation-items">
-      <div class="div-block-136">
-        <a href="index.html" aria-current="page" class="link split-underline w-inline-block w--current">
-          <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
-          <div class="custom-styles w-embed">
-            <style>
+  <div data-collapse="medium" data-animation="default" data-duration="400" fs-scrolldisable-element="smart-nav" data-easing="ease" data-easing2="ease" role="banner" class="nav_bar w-nav">
+    <div class="rl_navbar1_container">
+      <div>
+        <div class="navigation-items">
+          <div class="div-block-136">
+            <a href="index.html" aria-current="page" class="link split-underline w-inline-block w--current">
+              <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
+              <div class="custom-styles w-embed">
+                <style>
 .split-underline::before {
   transform-origin: 50% 100%;
   transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
@@ -45,19 +47,20 @@
   transform: translate3d(0, -2px, 0);
 }
 </style>
+              </div>
+            </a>
+            <div class="div-block-137">
+              <div class="text-block-16-copy"> still under Construction!</div>
+            </div>
           </div>
-        </a>
-        <div class="div-block-137">
-          <div class="text-block-16"> still under Construction</div>
+          <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
         </div>
       </div>
-      <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
-      <div class="navigation-wrap">
-        <nav role="navigation" class="navigation-items w-nav-menu">
-          <a href="index.html" aria-current="page" class="link text-decoration-none w-inline-block w--current">
-            <div class="three-dots">HOME</div>
-            <div class="custom-styles w-embed">
-              <style>
+      <nav role="navigation" class="rl_navbar1_menu is-page-height-tablet w-nav-menu">
+        <a href="index.html" aria-current="page" class="link text-decoration-none w-inline-block w--current">
+          <div class="three-dots">HOME</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -89,12 +92,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="#work" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">WORK</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="#work" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">WORK</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -126,12 +129,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="#" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">ABOUT</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="#about" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">ABOUT</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -163,12 +166,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="#contact_me" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">CONTACT ME</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="#contact_me" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">CONTACT ME</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -200,12 +203,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="resume.html" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">RESUME</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="resume.html" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">RESUME</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -237,15 +240,15 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="index.html" aria-current="page" class="navigation-item w-nav-link w--current">Home</a>
-          <a href="#" class="navigation-item w-nav-link">work</a>
-          <a href="#" class="navigation-item w-nav-link">About</a>
-          <a href="#contact_me" class="navigation-item w-nav-link">Contact me</a>
-          <a href="resume.html" class="navigation-item w-nav-link">Resume</a>
-        </nav>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
+          </div>
+        </a>
+      </nav>
+      <div class="rl_navbar1_menu-button w-nav-button">
+        <div class="rl_menu-icon">
+          <div class="navigation-wrap">
+            <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -784,6 +787,52 @@ height: 0.625rem;
                   </div>
                 </a>
                 <div class="paragraph-light cc-position-name"><strong>Market, User</strong></div>
+              </div>
+            </div>
+            <div id="w-node-_845a553e-d74b-ab3d-85e7-613ddccf03d9-3fff4113"><img src="images/image-3.jpeg" loading="lazy" alt="" class="image-7">
+              <div class="div-block-135">
+                <a href="#" class="link underline-fill w-inline-block">
+                  <div class="text-block-15">Data Engineering &amp; Science</div>
+                  <div class="custom-styles w-embed">
+                    <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                  </div>
+                </a>
+                <div class="paragraph-light cc-position-name">Python, Data-brick, Analytics</div>
               </div>
             </div>
           </div>
