--- a/work/project-1.html
+++ b/work/project-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Mar 02 2024 18:32:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Mar 03 2024 14:40:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f30ecff4118" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -1240,6 +1240,237 @@
 </style>
           </div>
         </a>
+      </div>
+    </div>
+  </div>
+  <div data-collapse="medium" data-animation="default" data-duration="400" fs-scrolldisable-element="smart-nav" data-easing="ease" data-easing2="ease" role="banner" class="nav_bar w-nav">
+    <div class="rl_navbar1_container">
+      <div>
+        <div class="navigation-items">
+          <div class="div-block-136">
+            <a href="../index.html" class="link split-underline w-inline-block">
+              <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
+              <div class="custom-styles w-embed">
+                <style>
+.split-underline::before {
+  transform-origin: 50% 100%;
+  transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+  clip-path: polygon(0% 0%, 0% 100%, 0 100%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%, 100% 100%, 100% 0%);
+}
+.split-underline:hover::before {
+  transform: translate3d(0, 2px, 0) scale3d(1.08, 3, 1);
+  clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 50% 0, 50% 0, 50% 100%, 50% 100%, 0 100%, 100% 100%, 100% 0%);
+}
+.split-underline div {
+  display: inline-block;
+  transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+}
+.split-underline:hover div {
+  transform: translate3d(0, -2px, 0);
+}
+</style>
+              </div>
+            </a>
+            <div class="div-block-137">
+              <div class="text-block-16-copy"> still under Construction!</div>
+            </div>
+          </div>
+          <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
+        </div>
+      </div>
+      <nav role="navigation" class="rl_navbar1_menu is-page-height-tablet w-nav-menu">
+        <a href="../index.html" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">HOME</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="#" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">WORK</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="#" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">ABOUT</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="#" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">CONTACT ME</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="../resume.html" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">RESUME</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+      </nav>
+      <div class="rl_navbar1_menu-button w-nav-button">
+        <div class="rl_menu-icon">
+          <div class="navigation-wrap">
+            <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
