--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Mar 02 2024 18:32:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Mar 03 2024 14:40:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4f98ff4116" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -20,13 +20,15 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-6">
-  <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
-    <div class="navigation-items">
-      <div class="div-block-136">
-        <a href="index.html" class="link split-underline w-inline-block">
-          <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
-          <div class="custom-styles w-embed">
-            <style>
+  <div data-collapse="medium" data-animation="default" data-duration="400" fs-scrolldisable-element="smart-nav" data-easing="ease" data-easing2="ease" role="banner" class="nav_bar w-nav">
+    <div class="rl_navbar1_container">
+      <div>
+        <div class="navigation-items">
+          <div class="div-block-136">
+            <a href="index.html" class="link split-underline w-inline-block">
+              <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
+              <div class="custom-styles w-embed">
+                <style>
 .split-underline::before {
   transform-origin: 50% 100%;
   transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
@@ -44,19 +46,20 @@
   transform: translate3d(0, -2px, 0);
 }
 </style>
+              </div>
+            </a>
+            <div class="div-block-137">
+              <div class="text-block-16-copy"> still under Construction!</div>
+            </div>
           </div>
-        </a>
-        <div class="div-block-137">
-          <div class="text-block-16"> still under Construction</div>
+          <a href="index.html" class="logo-link w-nav-brand"><img src="images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
         </div>
       </div>
-      <a href="index.html" class="logo-link w-nav-brand"><img src="images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
-      <div class="navigation-wrap">
-        <nav role="navigation" class="navigation-items w-nav-menu">
-          <a href="index.html" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">HOME</div>
-            <div class="custom-styles w-embed">
-              <style>
+      <nav role="navigation" class="rl_navbar1_menu is-page-height-tablet w-nav-menu">
+        <a href="index.html" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">HOME</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -88,12 +91,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="#" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">WORK</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="#" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">WORK</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -125,12 +128,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="#" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">ABOUT</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="#" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">ABOUT</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -162,12 +165,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="#contact_me" class="link text-decoration-none w-inline-block">
-            <div class="three-dots">CONTACT ME</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="#contact_me" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">CONTACT ME</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -199,12 +202,12 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="resume.html" aria-current="page" class="link text-decoration-none w-inline-block w--current">
-            <div class="three-dots">RESUME</div>
-            <div class="custom-styles w-embed">
-              <style>
+          </div>
+        </a>
+        <a href="resume.html" aria-current="page" class="link text-decoration-none w-inline-block w--current">
+          <div class="three-dots">RESUME</div>
+          <div class="custom-styles w-embed">
+            <style>
 .three-dots {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -236,15 +239,15 @@
 	color: #000;
 }
 </style>
-            </div>
-          </a>
-          <a href="index.html" class="navigation-item w-nav-link">Home</a>
-          <a href="#" class="navigation-item w-nav-link">work</a>
-          <a href="#" class="navigation-item w-nav-link">About</a>
-          <a href="#contact_me" class="navigation-item w-nav-link">Contact me</a>
-          <a href="resume.html" aria-current="page" class="navigation-item w-nav-link w--current">Resume</a>
-        </nav>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
+          </div>
+        </a>
+      </nav>
+      <div class="rl_navbar1_menu-button w-nav-button">
+        <div class="rl_menu-icon">
+          <div class="navigation-wrap">
+            <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -482,6 +485,54 @@
                     </div>
                   </a>
                   <div class="paragraph-light cc-position-name"><strong>Market, User</strong></div>
+                </div>
+              </div>
+              <div id="w-node-_25929e1f-5f4b-5b29-b079-2ee4296df318-98ff4116">
+                <div class="div-block-140"><img src="images/image-3.jpeg" loading="lazy" alt="" class="image-10">
+                  <div class="div-block-135">
+                    <a href="#" class="link underline-fill w-inline-block">
+                      <div class="text-block-15">Data Engineering &amp; Science </div>
+                      <div class="custom-styles w-embed">
+                        <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                      </div>
+                    </a>
+                    <div class="paragraph-light cc-position-name"><strong>Python, Data-brick, Analytics</strong></div>
+                  </div>
                 </div>
               </div>
             </div>
