--- a/work/development-operations.html
+++ b/work/development-operations.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Mar 02 2024 18:32:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Mar 03 2024 14:40:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e1550cc0fa8fef69ad2d8a" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -351,6 +351,237 @@
               <path fill-rule="evenodd" d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8c4.408 0 8-3.584 8-8s-3.592-8-8-8zm5.284 3.688a6.802 6.802 0 0 1 1.545 4.251c-.226-.043-2.482-.503-4.755-.217-.052-.112-.096-.234-.148-.355-.139-.33-.295-.668-.451-.99 2.516-1.023 3.662-2.498 3.81-2.69zM8 1.18c1.735 0 3.323.65 4.53 1.718-.122.174-1.155 1.553-3.584 2.464-1.12-2.056-2.36-3.74-2.551-4A6.95 6.95 0 0 1 8 1.18zm-2.907.642A43.123 43.123 0 0 1 7.627 5.77c-3.193.85-6.013.833-6.317.833a6.865 6.865 0 0 1 3.783-4.78zM1.163 8.01V7.8c.295.01 3.61.053 7.02-.971.199.381.381.772.555 1.162l-.27.078c-3.522 1.137-5.396 4.243-5.553 4.504a6.817 6.817 0 0 1-1.752-4.564zM8 14.837a6.785 6.785 0 0 1-4.19-1.44c.12-.252 1.509-2.924 5.361-4.269.018-.009.026-.009.044-.017a28.246 28.246 0 0 1 1.457 5.18A6.722 6.722 0 0 1 8 14.837zm3.81-1.171c-.07-.417-.435-2.412-1.328-4.868 2.143-.338 4.017.217 4.251.295a6.774 6.774 0 0 1-2.924 4.573z"></path>
             </svg></div>
         </a>
+      </div>
+    </div>
+  </div>
+  <div data-collapse="medium" data-animation="default" data-duration="400" fs-scrolldisable-element="smart-nav" data-easing="ease" data-easing2="ease" role="banner" class="nav_bar w-nav">
+    <div class="rl_navbar1_container">
+      <div>
+        <div class="navigation-items">
+          <div class="div-block-136">
+            <a href="../index.html" class="link split-underline w-inline-block">
+              <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
+              <div class="custom-styles w-embed">
+                <style>
+.split-underline::before {
+  transform-origin: 50% 100%;
+  transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+  clip-path: polygon(0% 0%, 0% 100%, 0 100%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%, 100% 100%, 100% 0%);
+}
+.split-underline:hover::before {
+  transform: translate3d(0, 2px, 0) scale3d(1.08, 3, 1);
+  clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 50% 0, 50% 0, 50% 100%, 50% 100%, 0 100%, 100% 100%, 100% 0%);
+}
+.split-underline div {
+  display: inline-block;
+  transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+}
+.split-underline:hover div {
+  transform: translate3d(0, -2px, 0);
+}
+</style>
+              </div>
+            </a>
+            <div class="div-block-137">
+              <div class="text-block-16-copy"> still under Construction!</div>
+            </div>
+          </div>
+          <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
+        </div>
+      </div>
+      <nav role="navigation" class="rl_navbar1_menu is-page-height-tablet w-nav-menu">
+        <a href="../index.html" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">HOME</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="#" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">WORK</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="#" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">ABOUT</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="#contact_me" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">CONTACT ME</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+        <a href="../resume.html" class="link text-decoration-none w-inline-block">
+          <div class="three-dots">RESUME</div>
+          <div class="custom-styles w-embed">
+            <style>
+.three-dots {
+	-webkit-transition: color 0.3s;
+	-moz-transition: color 0.3s;
+	transition: color 0.3s;
+}
+.three-dots::before {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	color: transparent;
+	content: "•";
+	text-shadow: 0 0 transparent;
+	font-size: 1.2em;
+	-webkit-transition: text-shadow 0.3s, color 0.3s;
+	-moz-transition: text-shadow 0.3s, color 0.3s;
+	transition: text-shadow 0.3s, color 0.3s;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	transform: translateX(-50%);
+	pointer-events: none;
+}
+.three-dots:hover::before,
+.three-dots:focus::before {
+	color: #000;
+	text-shadow: 10px 0 #000, -10px 0 #000;
+}
+.three-dots:hover,
+.three-dots:focus {
+	color: #000;
+}
+</style>
+          </div>
+        </a>
+      </nav>
+      <div class="rl_navbar1_menu-button w-nav-button">
+        <div class="rl_menu-icon">
+          <div class="navigation-wrap">
+            <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
