--- a/index.html
+++ b/index.html
@@ -252,15 +252,48 @@
       </div>
     </div>
   </div>
-  <div class="mainsection">
-    <div id="w-node-e39aa2a1-02f3-74f0-91bb-50306eb8d6aa-3fff4113" data-w-id="e39aa2a1-02f3-74f0-91bb-50306eb8d6aa" style="opacity:0;-webkit-transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="div-block-128">
-      <div class="container">
-        <div class="intro-wrap">
-          <div data-w-id="01b37a42-5ea5-e887-35c3-e3973cc99747" style="opacity:0" class="name_tittle">
-            <a href="resume.html" class="link split-underline w-inline-block">
-              <div class="text-block-20-copy">Ayo Akinnawo</div>
-              <div class="custom-styles w-embed">
-                <style>
+  <div class="main">
+    <section class="uui-banner08_component-2">
+      <div class="uui-page-padding-32">
+        <div class="uui-container-large-31">
+          <div class="uui-banner08_wrapper-2">
+            <div class="uui-banner08_content-2">
+              <div class="uui-banner08_icon-wrapper-2">
+                <div class="icon-featured-modern-large-2">
+                  <div class="uui-icon-1x1-xsmall-13 w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14.0913 6.72222H20.0451C20.5172 6.72222 20.7533 6.72222 20.8914 6.82149C21.0118 6.9081 21.0903 7.04141 21.1075 7.18877C21.1272 7.35767 21.0126 7.56403 20.7833 7.97677L19.3624 10.5343C19.2792 10.684 19.2376 10.7589 19.2213 10.8381C19.2069 10.9083 19.2069 10.9806 19.2213 11.0508C19.2376 11.13 19.2792 11.2049 19.3624 11.3545L20.7833 13.9121C21.0126 14.3248 21.1272 14.5312 21.1075 14.7001C21.0903 14.8475 21.0118 14.9808 20.8914 15.0674C20.7533 15.1667 20.5172 15.1667 20.0451 15.1667H12.6136C12.0224 15.1667 11.7268 15.1667 11.501 15.0516C11.3024 14.9504 11.1409 14.7889 11.0397 14.5903C10.9247 14.3645 10.9247 14.0689 10.9247 13.4778V10.9444M7.23023 21.5L3.00801 4.61111M4.59139 10.9444H12.4024C12.9936 10.9444 13.2892 10.9444 13.515 10.8294C13.7136 10.7282 13.8751 10.5667 13.9763 10.3681C14.0913 10.1423 14.0913 9.84672 14.0913 9.25556V4.18889C14.0913 3.59772 14.0913 3.30214 13.9763 3.07634C13.8751 2.87773 13.7136 2.71625 13.515 2.61505C13.2892 2.5 12.9936 2.5 12.4024 2.5H4.6433C3.90597 2.5 3.53731 2.5 3.28515 2.65278C3.06415 2.78668 2.89995 2.99699 2.82364 3.24387C2.73659 3.52555 2.82601 3.88321 3.00484 4.59852L4.59139 10.9444Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg></div>
+                </div>
+              </div>
+              <div class="uui-banner08_text-wrapper-2">
+                <div class="uui-banner08_text-2">Try out the Natural Language processing NLP Project I am working on powered by Openai GPT3.5 Turbo</div>
+              </div>
+            </div>
+            <div class="uui-button-row-11">
+              <div class="uui-button-wrapper-8">
+                <a href="http://18.219.20.212" class="uui-button-secondary-gray-21 is-button-small w-inline-block">
+                  <div class="text-block-58">Generative AI Chatbot</div>
+                </a>
+              </div>
+            </div>
+            <a data-w-id="57cb8171-8d55-190e-9440-363f524381a1" href="#" class="uui-banner08_close-button-2 w-inline-block">
+              <div class="uui-icon-1x1-xxsmall-2 w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15 5L5 15M5 5L15 15" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="mainsection">
+      <div id="w-node-e39aa2a1-02f3-74f0-91bb-50306eb8d6aa-3fff4113" data-w-id="e39aa2a1-02f3-74f0-91bb-50306eb8d6aa" style="opacity:0;-webkit-transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 195px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="div-block-128">
+        <div class="container">
+          <div class="intro-wrap">
+            <div data-w-id="01b37a42-5ea5-e887-35c3-e3973cc99747" style="opacity:0" class="name_tittle">
+              <a href="resume.html" class="link split-underline w-inline-block">
+                <div class="text-block-20-copy">Ayo Akinnawo</div>
+                <div class="custom-styles w-embed">
+                  <style>
 .split-underline::before {
   transform-origin: 50% 100%;
   transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
@@ -278,17 +311,17 @@
   transform: translate3d(0, -2px, 0);
 }
 </style>
-              </div>
-            </a>
-            <div class="paragraph-light">Software Engineering, Data Engineering &amp; Developement Operations</div>
-          </div>
-          <div>
-            <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span data-w-id="6dcefe20-f2c4-2ae6-472d-60d2b913c9b8" style="opacity:0" class="text-span">Full Stack  </span><span class="se_header">Software Engineer</span><span class="text-span"><br>‍</span>based in <span class="loc_header">Dallas, TX.</span> </h1>
-            <div class="text-block-11">Full Stack</div>
-            <a href="#" class="link underline-fill w-inline-block">
-              <div class="text-block-12-copy">Software Engineer </div>
-              <div class="custom-styles w-embed">
-                <style>
+                </div>
+              </a>
+              <div class="paragraph-light">Software Engineering, Data Engineering &amp; Developement Operations</div>
+            </div>
+            <div>
+              <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span data-w-id="6dcefe20-f2c4-2ae6-472d-60d2b913c9b8" style="opacity:0" class="text-span">Full Stack  </span><span class="se_header">Software Engineer</span><span class="text-span"><br>‍</span>based in <span class="loc_header">Dallas, TX.</span> </h1>
+              <div class="text-block-11">Full Stack</div>
+              <a href="#" class="link underline-fill w-inline-block">
+                <div class="text-block-12-copy">Software Engineer </div>
+                <div class="custom-styles w-embed">
+                  <style>
 .underline-fill::before {
   height: 100%;
   top: 0;
@@ -324,15 +357,15 @@
   opacity: 0;
 }
 </style>
-              </div>
-            </a>
-            <div class="text-block-13">based in Dallas, TX</div>
-            <a href="#" class="link wavy-link w-inline-block">
-              <div class="line-graphic w-embed"><svg class="link__graphic link__graphic--slide" width="300%" height="100%" viewbox="0 0 1200 60" preserveaspectratio="none">
-                  <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
-                </svg></div>
-              <div class="custom-styles w-embed">
-                <style>
+                </div>
+              </a>
+              <div class="text-block-13">based in Dallas, TX</div>
+              <a href="#" class="link wavy-link w-inline-block">
+                <div class="line-graphic w-embed"><svg class="link__graphic link__graphic--slide" width="300%" height="100%" viewbox="0 0 1200 60" preserveaspectratio="none">
+                    <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
+                  </svg></div>
+                <div class="custom-styles w-embed">
+                  <style>
 .wavy-link {
   font-family: lust-fine, sans-serif;
   overflow: hidden;
@@ -357,13 +390,14 @@
   transform: translate3d(-66.6%, 0, 0);
 }
 </style>
-              </div>
-            </a>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+      <div id="w-node-de629e14-39ff-cb9d-9c5a-09661a075203-3fff4113" class="div-block-127"><img src="images/796aa837a81f3cf2b7eb363150d4d62c.gif" loading="lazy" style="opacity:0" data-w-id="933c31ba-b3ea-30f4-2e76-2b47214af284" alt="" class="image-11"></div>
     </div>
-    <div id="w-node-de629e14-39ff-cb9d-9c5a-09661a075203-3fff4113" class="div-block-127"><img src="images/796aa837a81f3cf2b7eb363150d4d62c.gif" loading="lazy" style="opacity:0" data-w-id="933c31ba-b3ea-30f4-2e76-2b47214af284" alt="" class="image-11"></div>
   </div>
   <div class="scroll_dwn">
     <a href="#work" class="link-block-7 w-inline-block">
