--- a/work/software-engineering.html
+++ b/work/software-engineering.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Mar 03 2024 14:40:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Mar 05 2024 14:54:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e14ad4f7f059d1a85fa108" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -275,7 +275,21 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/fastAPI.jpeg" alt="" srcset="../images/fastAPI-p-500.jpeg 500w, ../images/fastAPI-p-800.jpeg 800w, ../images/fastAPI-p-1080.jpeg 1080w, ../images/fastAPI-p-1600.jpeg 1600w, ../images/fastAPI.jpeg 1920w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/do-p-500.jpg 500w, ../images/do-p-800.jpg 800w, ../images/do.jpg 1080w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" src="../images/do.jpg" alt="" class="uui-team10_image-2"></div>
+                <div class="div-block-126">
+                  <div class="uui-heading-tiny-9">
+                    <a href="http://18.219.20.212" target="_blank" class="uui-blogsection12_title-link w-inline-block">
+                      <h3 class="uui-heading-xsmall-12">OpenAI integration</h3>
+                      <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg></div>
+                    </a>
+                  </div>
+                  <div class="uui-text-size-medium-26 text-color-primary700">Generative-AI-ChatBOT </div>
+                </div>
+              </div>
+              <div class="uui-team10_item-2">
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/fastAPI.jpeg" alt="" srcset="../images/fastAPI-p-500.jpeg 500w, ../images/fastAPI-p-800.jpeg 800w, ../images/fastAPI-p-1080.jpeg 1080w, ../images/fastAPI-p-1600.jpeg 1600w, ../images/fastAPI.jpeg 1920w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
@@ -289,7 +303,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/6708707b40c1c3b07a2161535560c31d.png" alt="" srcset="../images/6708707b40c1c3b07a2161535560c31d-p-500.png 500w, ../images/6708707b40c1c3b07a2161535560c31d-p-800.png 800w, ../images/6708707b40c1c3b07a2161535560c31d-p-1080.png 1080w, ../images/6708707b40c1c3b07a2161535560c31d.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/6708707b40c1c3b07a2161535560c31d.png" alt="" srcset="../images/6708707b40c1c3b07a2161535560c31d-p-500.png 500w, ../images/6708707b40c1c3b07a2161535560c31d-p-800.png 800w, ../images/6708707b40c1c3b07a2161535560c31d-p-1080.png 1080w, ../images/6708707b40c1c3b07a2161535560c31d.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
@@ -303,7 +317,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/web_1920___3_4x.png" alt="" srcset="../images/web_1920___3_4x-p-500.png 500w, ../images/web_1920___3_4x-p-800.png 800w, ../images/web_1920___3_4x-p-1080.png 1080w, ../images/web_1920___3_4x.png 1281w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/web_1920___3_4x.png" alt="" srcset="../images/web_1920___3_4x-p-500.png 500w, ../images/web_1920___3_4x-p-800.png 800w, ../images/web_1920___3_4x-p-1080.png 1080w, ../images/web_1920___3_4x.png 1281w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
@@ -317,7 +331,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/artboard___2_4x.png" alt="" srcset="../images/artboard___2_4x-p-500.png 500w, ../images/artboard___2_4x-p-800.png 800w, ../images/artboard___2_4x-p-1080.png 1080w, ../images/artboard___2_4x.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/artboard___2_4x.png" alt="" srcset="../images/artboard___2_4x-p-500.png 500w, ../images/artboard___2_4x-p-800.png 800w, ../images/artboard___2_4x-p-1080.png 1080w, ../images/artboard___2_4x.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
