--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
-  <title>Ayo's Portfolio</title>
+  <title> Ayo's Portfolio </title>
   <meta content="Ayo's Portfolio" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
@@ -271,7 +271,7 @@
             </div>
             <div class="uui-button-row-11">
               <div class="uui-button-wrapper-8">
-                <a href="http://18.219.20.212" class="uui-button-secondary-gray-21 is-button-small w-inline-block">
+                <a href="http://18.219.20.212" target="_blank" class="uui-button-secondary-gray-21 is-button-small w-inline-block">
                   <div class="text-block-58">Generative AI Chatbot</div>
                 </a>
               </div>
